--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,7 @@ cmake_minimum_required(VERSION 3.22)
 
 project(VulkanGame)
 
-set(CMAKE_C_COMPILER $ENV{LLVM}/bin/clang.exe)
-set(CMAKE_CXX_COMPILER $ENV{LLVM}/bin/clang++.exe)
+set(CMAKE_CXX_COMPILER $ENV{MSYS2}/ucrt64/bin/clang++.exe)
 set(CMAKE_CXX_STANDARD 20)
 
 include_directories(include)
