--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,9 +19,13 @@ Sampler.cpp
 Camera.cpp
 Timer.cpp
 Font.cpp
+Editor.cpp
 )
 
 target_link_libraries(MyVulkan vulkan-1 glfw3dll ktx freetype)
 
 add_executable(Main main.cpp)
 target_link_libraries(Main MyVulkan vulkan-1 glfw3dll ktx freetype)
+
+add_executable(Test test.cpp)
+target_link_libraries(Test MyVulkan)
